--- a/internal/src/scss/home.scss
+++ b/internal/src/scss/home.scss
@@ -2,16 +2,84 @@
 // Home
 // =======================
 
-body {
+@import "shared/core";
+
+$min-height: 500px;
+
+.body {
+	position: relative;
+	width: 100%;
+	height: 100%;
 	font-size: 14px;
 	line-height: 1.5;
 	color: #333;
+	background-image: linear-gradient(45deg, #829199 0%, #94a5b3 30%, #abb6be 55%, #dadddb 100%);
+	background-repeat: no-repeat;
+}
 
-	h1 {
-		color: red;
+.main {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 640px;
+	height: 100vh;
+	min-height: $min-height;
+	margin: 0 auto;
+	background-color: rgba(#fff, .75);
+	transition: width 0.25s;
+
+	@media only screen and (max-width: 640px) {
+		width: 90%;
 	}
 }
 
-.color {
-	color: red;
+.content {
+	width: 100%;
+	padding: 20px 40px 40px;
+}
+
+.headshot {
+	width: 182px;
+	height: 236px;
+	background: url('../images/dalia_feinholz.png') 0 0 no-repeat;
+	background-size: 182px 236px;
+	border-radius: 4px;
+}
+
+.headline {
+	text-align: center;
+
+	span {
+		display: block;
+	}
+
+	&:after {
+		content: '';
+		display: block;
+		width: 60px;
+		margin: 26px auto 30px;
+		border-bottom: 1px solid rgba(#000, .2);
+	}
+}
+
+.subheadline {
+	width: 90%;
+	margin: 0 auto 20px;
+	text-align: center;
+
+	.bullet {
+		display: inline-block;
+		padding: 0 3px;
+		margin-top: -4px;
+		vertical-align: middle;
+		font-size: 14px;
+	}
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
+	color: rgba(#829199, .8);
 }
