Added icons and updated mobile layout.
Other notable updates:

* Added autoprefixer to gulp task
* Added breakpoint variables
* Created svg icon font
* Created color variables

Files modified:

	new file:   dist/assets/fonts/icons.eot
	new file:   dist/assets/fonts/icons.svg
	new file:   dist/assets/fonts/icons.ttf
	new file:   dist/assets/fonts/icons.woff
	modified:   dist/index.html
	modified:   internal/gulpfile.js
	modified:   internal/src/scss/home.scss
	new file:   internal/src/scss/shared/_colors.scss
	modified:   internal/src/scss/shared/_core.scss
	new file:   internal/src/scss/shared/_icons.scss
	modified:   internal/src/scss/shared/_reset.scss
	modified:   internal/src/scss/shared/_typography.scss
	new file:   internal/src/scss/shared/_utilities.scss

--- a/internal/src/scss/shared/_reset.scss
+++ b/internal/src/scss/shared/_reset.scss
@@ -6,7 +6,7 @@
 	box-sizing: border-box;
 }
 
-h1,h2,h3,h4,h5,h6,body,main,header,footer,div {
+h1,h2,h3,h4,h5,h6,body,main,header,footer,div,ul,li,p,a {
 	margin: 0;
 	padding: 0;
 }
