--- a/internal/src/scss/home.scss
+++ b/internal/src/scss/home.scss
@@ -5,6 +5,8 @@
 @import "shared/core";
 
 $min-height: 500px;
+$main-max-width: 590px;
+$content-max-width: 506px;
 
 .body {
 	position: relative;
@@ -12,8 +14,8 @@ $min-height: 500px;
 	height: 100%;
 	font-size: 14px;
 	line-height: 1.5;
-	color: #333;
-	background-image: linear-gradient(45deg, #829199 0%, #94a5b3 30%, #abb6be 55%, #dadddb 100%);
+	color: $body;
+	background-image: linear-gradient(45deg, $accent-dark 0%, $accent-medium-dark 30%, $accent-medium-light 55%, $accent-light 100%);
 	background-repeat: no-repeat;
 }
 
@@ -21,65 +23,135 @@ $min-height: 500px;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 640px;
+	width: $main-max-width;
 	height: 100vh;
 	min-height: $min-height;
 	margin: 0 auto;
-	background-color: rgba(#fff, .75);
+	background-color: rgba($white, .75);
 	transition: width 0.25s;
 
-	@media only screen and (max-width: 640px) {
+	@media only screen and (max-width: $main-max-width) {
 		width: 90%;
+		min-height: 600px;
 	}
 }
 
 .content {
 	width: 100%;
 	padding: 20px 40px 40px;
-}
+	text-align: center;
 
-.headshot {
-	width: 182px;
-	height: 236px;
-	background: url('../images/dalia_feinholz.png') 0 0 no-repeat;
-	background-size: 182px 236px;
-	border-radius: 4px;
+	@media only screen and (max-width: $content-max-width) {
+		text-align: left;
+		padding-right: 20px;
+		padding-left: 20px;
+	}
+
 }
 
 .headline {
-	text-align: center;
-
 	span {
 		display: block;
 	}
 
 	&:after {
-		content: '';
-		display: block;
-		width: 60px;
-		margin: 26px auto 30px;
-		border-bottom: 1px solid rgba(#000, .2);
+		@include divider;
+		margin-top: 26px;
+		margin-bottom: 32px;
 	}
 }
 
 .subheadline {
+	@include center;
 	width: 90%;
-	margin: 0 auto 20px;
-	text-align: center;
+	padding-bottom: 20px;
 
-	.bullet {
+	@media only screen and (max-width: $content-max-width) {
+		margin-left: 0;
+	}
+
+	ul li {
 		display: inline-block;
-		padding: 0 3px;
-		margin-top: -4px;
-		vertical-align: middle;
-		font-size: 14px;
+		list-style-type: none;
+
+		@media only screen and (max-width: $content-max-width) {
+			display: block;
+			text-transform: capitalize
+		}
+
+		&:before {
+			content: '\2022';
+			display: inline-block;
+			vertical-align: middle;
+			margin-top: -4px;
+			padding-right: 9px;
+			padding-left: 5px;
+			font-size: 14px;
+
+			@media only screen and (max-width: $content-max-width) {
+				padding-right: 8px;
+				padding-left: 0;
+			}
+		}
+
+		&:first-child {
+			&:before {
+				display: none;
+
+				@media only screen and (max-width: $content-max-width) {
+					display: inline-block;
+				}
+			}
+		}
+	}
+}
+
+.logos {
+	margin-top: 22px;
+
+	li {
+		display: inline-block;
+		margin: 0 6px;
+		list-style-type: none;
+		text-align: center;
+
+		a {
+			position: relative;
+			display: block;
+			width: 40px;
+			height: 40px;
+			padding: 9px;
+			border-radius: 40px;
+			border: 1px solid $accent-medium-dark;
+			color: $accent-medium-dark;
+			transition: color 0.25s, border 0.25s;
+
+			&:hover {
+				color: $accent-dark;
+				border-color: $accent-dark;
+			}
+		}
 	}
 }
 
 .footer {
 	position: absolute;
 	bottom: 0;
-	width: 100%;
+	right: 0;
+	left: 0;
 	text-align: center;
-	color: rgba(#829199, .8);
+	color: rgba($accent-dark, .8);
+
+	p {
+		padding: 12px 20px;
+	}
+
+	@media only screen and (max-width: $content-max-width) {
+		text-align: left;
+
+		p {
+			@include center;
+			width: 90%;
+		}
+	}
 }
