Updating icon path to point to live.
* Updated icon path from /prototype/ to live
* Also added charset to scss

Files:

	modified:   internal/src/scss/shared/_core.scss
	modified:   internal/src/scss/shared/_icons.scss

--- a/internal/src/scss/shared/_icons.scss
+++ b/internal/src/scss/shared/_icons.scss
@@ -15,9 +15,9 @@
 
 @font-face {
 	font-family: 'DF Icons';
-	src: url('http://daliafeinholz.com/prototype/assets/fonts/icons.eot'); /* IE9 Compat Modes */
-	src: url('http://daliafeinholz.com/prototype/assets/fonts/icons.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-		 url('http://daliafeinholz.com/prototype/assets/fonts/icons.woff') format('woff'), /* Pretty Modern Browsers */
-		 url('http://daliafeinholz.com/prototype/assets/fonts/icons.ttf')  format('truetype'), /* Safari, Android, iOS */
-		 url('http://daliafeinholz.com/prototype/assets/fonts/icons.svg#icons') format('svg'); /* Legacy iOS */
+	src: url('http://daliafeinholz.com/assets/fonts/icons.eot'); /* IE9 Compat Modes */
+	src: url('http://daliafeinholz.com/assets/fonts/icons.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+		 url('http://daliafeinholz.com/assets/fonts/icons.woff') format('woff'), /* Pretty Modern Browsers */
+		 url('http://daliafeinholz.com/assets/fonts/icons.ttf')  format('truetype'), /* Safari, Android, iOS */
+		 url('http://daliafeinholz.com/assets/fonts/icons.svg#icons') format('svg'); /* Legacy iOS */
 }
